<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="handler"
            type="com.example.kinandcartachallenge.activity.detail.DetailActivity" />
        <variable
            name="viewmodel"
            type="com.example.kinandcartachallenge.activity.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.detail.DetailActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:theme="@style/CustomToolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/detail"

            >



        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_horizontal_margin"
                android:layout_marginEnd="@dimen/default_horizontal_margin">

                <ImageView
                    android:id="@+id/contact_image"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="@dimen/detail_imageview_horizontal_margin"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="@dimen/detail_imageview_horizontal_margin"
                    android:src="@drawable/user_large"
                    android:scaleType="centerInside"
                    android:transitionName="person_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    bind:imageBitmap="@{viewmodel.person.largeImageURL}" />

                <TextView
                    android:id="@+id/contact_name"
                    android:transitionName="person_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="@dimen/default_text_title_size"
                    android:text="@{viewmodel.person.name}"
                    app:layout_constraintTop_toBottomOf="@id/contact_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/contact_company_name"
                    android:transitionName="person_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:visibility="@{viewmodel.person.companyName.isEmpty ? View.GONE : View.VISIBLE}"
                    android:text="@{viewmodel.person.companyName}"
                    android:textSize="@dimen/default_text_size"
                    app:layout_constraintTop_toBottomOf="@id/contact_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <View
                    android:id="@+id/home_phone_line_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/grayDivider"
                    android:layout_marginTop="@dimen/default_vertical_margin"
                    app:layout_constraintTop_toBottomOf="@id/contact_company_name"
                    />

                <TextView
                    android:id="@+id/home_phone_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_phone"
                    android:textSize="@dimen/default_text_size_small"
                    android:layout_marginTop="@dimen/default_vertical_margin"
                    android:visibility="@{viewmodel.person.phone.home == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintTop_toBottomOf="@id/home_phone_line_separator"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"/>

                <TextView
                    android:id="@+id/home_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/default_text_size"
                    android:layout_marginTop="@dimen/default_vertical_margin_small"
                    android:visibility="@{viewmodel.person.phone.home == null ? View.GONE : View.VISIBLE}"
                    android:text="@{viewmodel.person.phone.home}"
                    app:layout_constraintTop_toBottomOf="@id/home_phone_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0"/>

                <TextView
                    android:id="@+id/home_phone_number_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewmodel.person.phone.home == null? View.GONE : View.VISIBLE}"
                    android:text="@string/detail_home_phone"
                    app:layout_constraintTop_toBottomOf="@id/home_phone_label"
                    app:layout_constraintBaseline_toBaselineOf="@+id/home_phone_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/home_phone_number"
                    app:layout_constraintHorizontal_bias="0"/>

                <View
                    android:id="@+id/mobile_phone_line_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/default_vertical_margin"
                    android:visibility="@{viewmodel.person.phone.home == null ? View.GONE : View.VISIBLE}"
                    android:background="?attr/grayDivider"
                    app:layout_constraintTop_toBottomOf="@id/home_phone_number"
                    />

                <TextView
                    android:id="@+id/mobile_phone_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_phone"
                    android:textSize="@dimen/default_text_size_small"
                    android:layout_marginTop="@dimen/default_vertical_margin"
                    android:visibility="@{viewmodel.person.phone.mobile == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintTop_toBottomOf="@id/mobile_phone_line_separator"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"/>

                <TextView
                    android:id="@+id/mobile_home_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/default_text_size"
                    android:layout_marginTop="@dimen/default_vertical_margin_small"
                    android:visibility="@{viewmodel.person.phone.mobile == null ? View.GONE : View.VISIBLE}"
                    android:text="@{viewmodel.person.phone.mobile}"
                    app:layout_constraintTop_toBottomOf="@id/mobile_phone_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0"/>

                <TextView
                    android:id="@+id/mobile_phone_number_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_mobile_phone"
                    android:visibility="@{viewmodel.person.phone.mobile == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintTop_toBottomOf="@id/mobile_phone_label"
                    app:layout_constraintBaseline_toBaselineOf="@+id/mobile_home_phone_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/home_phone_number"
                    app:layout_constraintHorizontal_bias="0"/>

                <View
                    android:id="@+id/work_phone_line_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/default_vertical_margin"
                    android:visibility="@{viewmodel.person.phone.mobile == null ? View.GONE : View.VISIBLE}"
                    android:background="?attr/grayDivider"
                    app:layout_constraintTop_toBottomOf="@id/mobile_home_phone_number"
                    />

                <TextView
                    android:id="@+id/work_phone_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_phone"
                    android:textSize="@dimen/default_text_size_small"
                    android:layout_marginTop="@dimen/default_vertical_margin"
                    android:visibility="@{viewmodel.person.phone.work == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintTop_toBottomOf="@id/work_phone_line_separator"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"/>

                <TextView
                    android:id="@+id/work_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/default_text_size"
                    android:layout_marginTop="@dimen/default_vertical_margin_small"
                    android:visibility="@{viewmodel.person.phone.work == null ? View.GONE : View.VISIBLE}"
                    android:text="@{viewmodel.person.phone.work}"
                    app:layout_constraintTop_toBottomOf="@id/work_phone_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0"/>

                <TextView
                    android:id="@+id/work_phone_number_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_work_phone"
                    android:visibility="@{viewmodel.person.phone.work == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintTop_toBottomOf="@id/work_phone_label"
                    app:layout_constraintBaseline_toBaselineOf="@+id/work_phone_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/home_phone_number"
                    app:layout_constraintHorizontal_bias="0"/>

                <View
                    android:id="@+id/address_line_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/default_vertical_margin"
                    android:visibility="@{viewmodel.person.phone.work == null ? View.GONE : View.VISIBLE}"
                    android:background="?attr/grayDivider"
                    app:layout_constraintTop_toBottomOf="@id/work_phone_number"
                    />

                <TextView
                    android:id="@+id/address_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_address"
                    android:layout_marginTop="@dimen/default_vertical_margin"
                    android:textSize="@dimen/default_text_size_small"
                    app:layout_constraintTop_toBottomOf="@id/address_line_separator"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"/>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/default_text_size"
                    android:layout_marginTop="@dimen/default_vertical_margin_small"
                    android:text="@{viewmodel.person.address.street+' '+viewmodel.person.address.city+' '+viewmodel.person.address.state+' '+viewmodel.person.address.zipCode+' '+viewmodel.person.address.country}"
                    app:layout_constraintTop_toBottomOf="@id/address_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0"/>

                <View
                    android:id="@+id/birthdate_line_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/default_vertical_margin"
                    android:background="?attr/grayDivider"
                    app:layout_constraintTop_toBottomOf="@id/address"
                    />

                <TextView
                    android:id="@+id/birthdate_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_birthdate"
                    android:layout_marginTop="@dimen/default_vertical_margin"
                    android:textSize="@dimen/default_text_size_small"
                    android:visibility="@{viewmodel.person.birthdate == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintTop_toBottomOf="@id/birthdate_line_separator"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"/>

                <TextView
                    android:id="@+id/birthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/default_text_size"
                    android:layout_marginTop="@dimen/default_vertical_margin_small"
                    android:visibility="@{viewmodel.person.birthdate == null ? View.GONE : View.VISIBLE}"
                    android:text="@{viewmodel.person.birthdate}"
                    app:layout_constraintTop_toBottomOf="@id/birthdate_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0"/>


                <View
                    android:id="@+id/email_line_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:visibility="@{viewmodel.person.birthdate == null ? View.GONE : View.VISIBLE}"
                    android:layout_marginTop="@dimen/default_vertical_margin"
                    android:background="?attr/grayDivider"
                    app:layout_constraintTop_toBottomOf="@id/birthdate"
                    />

                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_mail"
                    android:textSize="@dimen/default_text_size_small"
                    android:layout_marginTop="@dimen/default_vertical_margin"
                    android:visibility="@{viewmodel.person.emailAddress == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintTop_toBottomOf="@id/email_line_separator"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"/>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/default_text_size"
                    android:layout_marginTop="@dimen/default_vertical_margin_small"
                    android:layout_marginBottom="@dimen/default_vertical_margin_small"
                    android:visibility="@{viewmodel.person.emailAddress == null ? View.GONE : View.VISIBLE}"
                    android:text="@{viewmodel.person.emailAddress}"
                    app:layout_constraintTop_toBottomOf="@id/email_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0"/>




            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>